--- a/server/package.json
+++ b/server/package.json
@@ -2,12 +2,12 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
     "seeds": "mongo < ./db/seeds.js",
-    "server:dev": "nodemon server.js",
-    "start": "node server.js"
+    "server:dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
